<?xml version="1.0" encoding="utf-8"?>




    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".principal">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dije"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ingrese cantidad..."
        android:inputType="number"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calcular"
            android:text="@string/calcular"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/limpiar"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vlrunidad"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblVlrUnidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vlrtotal"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lblVlrTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

</LinearLayout>

</ScrollView>